<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navInicio"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navSolicitudes"
        android:icon="@drawable/ic_nav_requests"
        android:title="@string/nav_requests" />

    <item
        android:id="@+id/navFavoritos"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/navNotificaciones"
        android:icon="@drawable/ic_nav_notifications"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/navPerfil"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
